# flyingclub-reserve

./: .gitignore  README.md
client/: package-lock.json  package.json
client/flyingclub-reserve-client/: .angular-cli.json  README.md  package-lock.json  package.json
client/flyingclub-reserve-client/e2e/: app.e2e-spec.ts  app.po.ts
client/flyingclub-reserve-client/src/: index.html  main.ts
client/flyingclub-reserve-client/src/app/: app.component.html  app.component.ts  app.module.ts
client/flyingclub-reserve-client/src/app/components/reservation-createupdate/: reservation-createupdate.component.html  reservation-createupdate.component.ts
client/flyingclub-reserve-client/src/app/models/: Session.ts  airplane.ts  reservation.ts
client/flyingclub-reserve-client/src/app/services/: airplane.service.ts  authentication.service.ts  reservation.service.ts
client/flyingclub-reserve-client/src/app/utility/: MomentTransformer.ts  error-handler.ts  moment-transformer.ts
client/flyingclub-reserve-client/src/environments/: environment.ts
client/public/: index.html
client/src/: App.js  LoginForm.js
client/src/components/: Announcement.js  SubmitButton.js
server/exception-stacktrace/: LICENSE  exception-stacktrace.cabal  stack.yaml
server/exception-stacktrace/src/Control/Exception/: Format.hs  StackError.hs  Unauthorized.hs
server/flyingclub-reserve/: flyingclub-reserve.cabal  stack.yaml
server/flyingclub-reserve-api/: flyingclub-reserve-api.cabal  stack.yaml
server/flyingclub-reserve-api/src/Control/Exception/: Conflict.hs
server/flyingclub-reserve-api/src/Data/: CreateOrUpdate.hs  Notification.hs  ParsedAction.hs  ParsedActionResult.hs
server/flyingclub-reserve-api/src/Data/Time/: DayRange.hs  Friendly.hs  Horizon.hs
server/flyingclub-reserve-api/src/Request/Api/: Airplane.hs  AuthorizedAction.hs  Currency.hs  Document.hs  Hours.hs  ParsedAction.hs  Reservation.hs  User.hs
server/flyingclub-reserve-api/src/Request/Parser/: Day.hs  Reservation.hs  Time.hs  Utility.hs
server/flyingclub-reserve-api/test/: Spec.hs
server/flyingclub-reserve-api/test/Data/: NotificationSpec.hs
server/flyingclub-reserve-api/test/Data/Time/: DayRangeSpec.hs  FriendlySpec.hs
server/flyingclub-reserve-api/test/Request/Api/: AirplaneSpec.hs  CurrencySpec.hs  HoursSpec.hs  ParsedActionSpec.hs  ReservationSpec.hs  UserSpec.hs
server/flyingclub-reserve-api/test/Request/Parser/: DaySpec.hs  ReservationSpec.hs  TimeSpec.hs
server/flyingclub-reserve-db/: flyingclub-reserve-db.cabal  stack.yaml
server/flyingclub-reserve-db/src/Database/Persist/: Notification.hs  Schema.hs  Session.hs
server/flyingclub-reserve-db/src/Database/Persist/Audit/: Class.hs  Operations.hs
server/flyingclub-reserve-db/src/Database/Persist/Environment/: Environment.hs  Sqlite.hs
server/flyingclub-reserve-db/src/Database/Persist/Owner/: Class.hs  Instances.hs  Operations.hs
server/flyingclub-reserve-db/src/Database/Persist/Types/: DocumentScope.hs  JSON.hs  PIN.hs  PhoneNumber.hs  UUID.hs  UserType.hs
server/flyingclub-reserve-db/test/Database/Persist/: AuditSpec.hs  SessionSpec.hs
server/flyingclub-reserve-db/test/Database/Persist/Types/: JSONSpec.hs  PINSpec.hs  PhoneNumberSpec.hs  UUIDSpec.hs
server/flyingclub-reserve-rest/: flyingclub-reserve-rest.cabal  stack.yaml
server/flyingclub-reserve-rest/app/: Main.hs
server/flyingclub-reserve-rest/src/Data/: ReserveRoute.hs
server/flyingclub-reserve-rest/src/Web/: Application.hs  Authentication.hs  ErrorHandler.hs  Route.hs  Session.hs
server/flyingclub-reserve-rest/src/Web/Api/: Airplane.hs  Reservation.hs  Session.hs  User.hs
server/flyingclub-reserve-rest/test/Web/: AuthenticationSpec.hs  SessionSpec.hs
server/flyingclub-reserve-rest/test/Web/Api/: ReservationSpec.hs  SessionSpec.hs
server/flyingclub-reserve/app/: Main.hs
