name:                flyingclub-reserve-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/flyingclub-reserve-api#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Kollmansberger
maintainer:          steve@kolls.net
copyright:           2017 Steve Kollmansberger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Exception.Unauthorized, Control.Exception.Conflict,
    Request.Api.AuthorizedAction, Request.Api.Hours, Request.Api.User, Request.Api.Reservation,
    Request.Parser.Day, Request.Parser.Time
  other-modules:       Data.Time.Horizon, Request.Parser.Utility, Data.CreateOrUpdate
  build-depends:       base >= 4.7 && < 5, exception-stacktrace, flyingclub-reserve-db,
    aeson, mtl, persistent, text, attoparsec, time, timezone-series, AC-Angle
  default-language:    Haskell2010


test-suite flyingclub-reserve-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hspec, timezone-olson, persistent-sqlite, random,
    exceptions,
    flyingclub-reserve-api, exception-stacktrace, flyingclub-reserve-db,
    aeson, mtl, persistent, text, attoparsec, time, timezone-series, AC-Angle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/flyingclub-reserve-api
