name:                flyingclub-reserve-rest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/flyingclub-reserve-rest#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Kollmansberger
maintainer:          steve@kolls.net
copyright:           2017 Steve Kollmansberger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ReserveRoute, Web.Application, Web.Authentication, Web.ErrorHandler, Web.Route,
    Web.Api.Session, Web.Api.User
  build-depends:       base >= 4.7 && < 5,
    wai, http-types, wai-routes, wai-extra, wai-cors, mtl, persistent, bytestring, text, aeson,
    flyingclub-reserve-api, exception-stacktrace, flyingclub-reserve-db
  default-language:    Haskell2010

executable flyingclub-reserve-rest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
    warp, wai, wai-extra, mtl, persistent, random, monad-logger,
    flyingclub-reserve-rest, flyingclub-reserve-api, exception-stacktrace, flyingclub-reserve-db
  default-language:    Haskell2010

test-suite flyingclub-reserve-rest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5,
    warp, wai, mtl, persistent, random, aeson, time, persistent-sqlite, wai-extra, http-types, bytestring,
    hspec, hspec-wai, monad-logger, directory,
    flyingclub-reserve-rest, flyingclub-reserve-api, exception-stacktrace, flyingclub-reserve-db
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/flyingclub-reserve-rest
