name:                flyingclub-reserve
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/flyingclub-reserve#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Kollmansberger
maintainer:          steve@kolls.net
copyright:           2017 Steve Kollmansberger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable flyingclub-reserve-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
    flyingclub-reserve-api, exception-stacktrace, flyingclub-reserve-db,
    mtl, persistent-mysql, wai, warp, random, monad-logger
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/flyingclub-reserve
